Creeat project with stepwizzard

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@
 .no-scrollbar::-webkit-scrollbar {
   display: none;
 }
+
+textarea {
+  resize: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
