--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,13 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.rsw_2f {
+  display: none;
+  transition: all;
+  animation-duration: 350ms;
+}
+
+.rsw_3G {
+  display: block;
+}
